trunk/Plural/generated/edu/cmu/cs/plural/perm/parser/AccessPredParser.java
// $ANTLR 3.0.1 C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g 2008-08-19 12:00:38

package edu.cmu.cs.plural.perm.parser;

import edu.cmu.cs.plural.perm.parser.*;
import edu.cmu.cs.plural.fractions.Fraction;
import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class AccessPredParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "FALSE", "ID", "IN", "IMPLIES", "DEQ", "NEQ", "NUMBER", "NULL", "ALT", "WITH", "TENS", "ONE", "ZERO", "LETTER", "DIGIT", "WHITESPACE", "'('", "')'", "','", "'#'", "'!fr'", "'='", "'/'"
    };
    public static final int IMPLIES=8;
    public static final int LETTER=18;
    public static final int NULL=12;
    public static final int NUMBER=11;
    public static final int DEQ=9;
    public static final int WHITESPACE=20;
    public static final int ONE=16;
    public static final int ID=6;
    public static final int EOF=-1;
    public static final int TRUE=4;
    public static final int ZERO=17;
    public static final int NEQ=10;
    public static final int IN=7;
    public static final int ALT=13;
    public static final int TENS=15;
    public static final int DIGIT=19;
    public static final int FALSE=5;
    public static final int WITH=14;

        public AccessPredParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g"; }

    
        /**
         * Main method for parser testing.
         */
        public static void main(String[] args) throws Exception {
            AccessPredLexer lex = new AccessPredLexer(new ANTLRFileStream(args[0]));
           	CommonTokenStream tokens = new CommonTokenStream(lex);
    
            AccessPredParser parser = new AccessPredParser(tokens);
    
            try {
                parser.start();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }
        
        private static AccessPred treeOfConjList(List<AccessPred> list) {
          if( list.size() == 1 ) {
          	return list.get(0);
          } 
          else if( list.size() == 0 ) {
          	throw new IllegalStateException();
          }
          else {
          	return new Conjunction( list.remove(0), treeOfConjList( list ) );
          }
        }
        
        private static AccessPred treeOfDisjList(List<AccessPred> list) {
          if( list.size() == 1 ) {
          	return list.get(0);
          } 
          else if( list.size() == 0 ) {
          	throw new IllegalStateException();
          }
          else {
          	return new Disjunction( list.remove(0), treeOfConjList( list ) );
          }    
        }
        
        private static AccessPred treeOfWithList(List<AccessPred> list) {
          if( list.size() == 1 ) {
          	return list.get(0);
          } 
          else if( list.size() == 0 ) {
          	throw new IllegalStateException();
          }
          else {
          	return new Withing( list.remove(0), treeOfConjList( list ) );
          }
        }



    // $ANTLR start start
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:110:1: start returns [TopLevelPred result] : (p= perm EOF | TRUE EOF | FALSE EOF | EOF );
    public final TopLevelPred start() throws RecognitionException {
        TopLevelPred result = null;

        AccessPred p = null;


        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:111:2: (p= perm EOF | TRUE EOF | FALSE EOF | EOF )
            int alt1=4;
            switch ( input.LA(1) ) {
            case ID:
            case NULL:
            case 21:
            case 24:
                {
                alt1=1;
                }
                break;
            case TRUE:
                {
                int LA1_2 = input.LA(2);

                if ( (LA1_2==EOF) ) {
                    alt1=2;
                }
                else if ( ((LA1_2>=DEQ && LA1_2<=NEQ)) ) {
                    alt1=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("110:1: start returns [TopLevelPred result] : (p= perm EOF | TRUE EOF | FALSE EOF | EOF );", 1, 2, input);

                    throw nvae;
                }
                }
                break;
            case FALSE:
                {
                int LA1_3 = input.LA(2);

                if ( (LA1_3==EOF) ) {
                    alt1=3;
                }
                else if ( ((LA1_3>=DEQ && LA1_3<=NEQ)) ) {
                    alt1=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("110:1: start returns [TopLevelPred result] : (p= perm EOF | TRUE EOF | FALSE EOF | EOF );", 1, 3, input);

                    throw nvae;
                }
                }
                break;
            case EOF:
                {
                alt1=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("110:1: start returns [TopLevelPred result] : (p= perm EOF | TRUE EOF | FALSE EOF | EOF );", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:111:4: p= perm EOF
                    {
                    pushFollow(FOLLOW_perm_in_start43);
                    p=perm();
                    _fsp--;

                    match(input,EOF,FOLLOW_EOF_in_start45); 
                     result = p; 

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:112:4: TRUE EOF
                    {
                    match(input,TRUE,FOLLOW_TRUE_in_start52); 
                    match(input,EOF,FOLLOW_EOF_in_start54); 
                     result = null; 

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:113:4: FALSE EOF
                    {
                    match(input,FALSE,FOLLOW_FALSE_in_start61); 
                    match(input,EOF,FOLLOW_EOF_in_start63); 
                     result = TopLevelPred.Impossible.getInstance(); 

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:114:4: EOF
                    {
                    match(input,EOF,FOLLOW_EOF_in_start70); 
                     result = null; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end start


    // $ANTLR start access_pred
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:117:1: access_pred returns [AccessPred result] : (i1= ID '(' i2= ref_expr ')' | i1= ID '(' i2= ref_expr ')' IN sl= state_list | i1= ID '(' i2= ref_expr ',' i3= ID ')' | i1= ID '(' i2= ref_expr ',' i3= ID ')' IN sl= state_list | i1= ID '(' i2= ref_expr ',' i3= ID ',' f= fractions ')' | i1= ID '(' i2= ref_expr ',' i3= ID ',' f= fractions ')' IN sl= state_list );
    public final AccessPred access_pred() throws RecognitionException {
        AccessPred result = null;

        Token i1=null;
        Token i3=null;
        RefExpr i2 = null;

        List<String> sl = null;

        TempFractionMap f = null;


        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:118:2: (i1= ID '(' i2= ref_expr ')' | i1= ID '(' i2= ref_expr ')' IN sl= state_list | i1= ID '(' i2= ref_expr ',' i3= ID ')' | i1= ID '(' i2= ref_expr ',' i3= ID ')' IN sl= state_list | i1= ID '(' i2= ref_expr ',' i3= ID ',' f= fractions ')' | i1= ID '(' i2= ref_expr ',' i3= ID ',' f= fractions ')' IN sl= state_list )
            int alt2=6;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:118:4: i1= ID '(' i2= ref_expr ')'
                    {
                    i1=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred89); 
                    match(input,21,FOLLOW_21_in_access_pred91); 
                    pushFollow(FOLLOW_ref_expr_in_access_pred95);
                    i2=ref_expr();
                    _fsp--;

                    match(input,22,FOLLOW_22_in_access_pred97); 
                     result = new TempPermission(i1.getText(),i2,null,null,null); 

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:120:4: i1= ID '(' i2= ref_expr ')' IN sl= state_list
                    {
                    i1=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred110); 
                    match(input,21,FOLLOW_21_in_access_pred112); 
                    pushFollow(FOLLOW_ref_expr_in_access_pred116);
                    i2=ref_expr();
                    _fsp--;

                    match(input,22,FOLLOW_22_in_access_pred118); 
                    match(input,IN,FOLLOW_IN_in_access_pred120); 
                    pushFollow(FOLLOW_state_list_in_access_pred124);
                    sl=state_list();
                    _fsp--;

                     result = new TempPermission(i1.getText(),i2,null,null,sl); 

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:122:4: i1= ID '(' i2= ref_expr ',' i3= ID ')'
                    {
                    i1=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred137); 
                    match(input,21,FOLLOW_21_in_access_pred139); 
                    pushFollow(FOLLOW_ref_expr_in_access_pred143);
                    i2=ref_expr();
                    _fsp--;

                    match(input,23,FOLLOW_23_in_access_pred145); 
                    i3=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred149); 
                    match(input,22,FOLLOW_22_in_access_pred151); 
                     result = new TempPermission(i1.getText(),i2,i3.getText(),null,null); 

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:124:4: i1= ID '(' i2= ref_expr ',' i3= ID ')' IN sl= state_list
                    {
                    i1=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred164); 
                    match(input,21,FOLLOW_21_in_access_pred166); 
                    pushFollow(FOLLOW_ref_expr_in_access_pred170);
                    i2=ref_expr();
                    _fsp--;

                    match(input,23,FOLLOW_23_in_access_pred172); 
                    i3=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred176); 
                    match(input,22,FOLLOW_22_in_access_pred178); 
                    match(input,IN,FOLLOW_IN_in_access_pred180); 
                    pushFollow(FOLLOW_state_list_in_access_pred184);
                    sl=state_list();
                    _fsp--;

                     result = new TempPermission(i1.getText(),i2,i3.getText(),null,sl); 

                    }
                    break;
                case 5 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:126:4: i1= ID '(' i2= ref_expr ',' i3= ID ',' f= fractions ')'
                    {
                    i1=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred196); 
                    match(input,21,FOLLOW_21_in_access_pred198); 
                    pushFollow(FOLLOW_ref_expr_in_access_pred202);
                    i2=ref_expr();
                    _fsp--;

                    match(input,23,FOLLOW_23_in_access_pred204); 
                    i3=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred208); 
                    match(input,23,FOLLOW_23_in_access_pred210); 
                    pushFollow(FOLLOW_fractions_in_access_pred214);
                    f=fractions();
                    _fsp--;

                    match(input,22,FOLLOW_22_in_access_pred216); 
                     result = new TempPermission(i1.getText(),i2,i3.getText(),f.getMap(),null); 

                    }
                    break;
                case 6 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:128:4: i1= ID '(' i2= ref_expr ',' i3= ID ',' f= fractions ')' IN sl= state_list
                    {
                    i1=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred228); 
                    match(input,21,FOLLOW_21_in_access_pred230); 
                    pushFollow(FOLLOW_ref_expr_in_access_pred234);
                    i2=ref_expr();
                    _fsp--;

                    match(input,23,FOLLOW_23_in_access_pred236); 
                    i3=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_access_pred240); 
                    match(input,23,FOLLOW_23_in_access_pred242); 
                    pushFollow(FOLLOW_fractions_in_access_pred246);
                    f=fractions();
                    _fsp--;

                    match(input,22,FOLLOW_22_in_access_pred248); 
                    match(input,IN,FOLLOW_IN_in_access_pred250); 
                    pushFollow(FOLLOW_state_list_in_access_pred254);
                    sl=state_list();
                    _fsp--;

                     result = new TempPermission(i1.getText(),i2,i3.getText(),f.getMap(),sl); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end access_pred


    // $ANTLR start implies
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:133:1: implies returns [AccessPred result] : ant= bin_expr IMPLIES cons= lowest ;
    public final AccessPred implies() throws RecognitionException {
        AccessPred result = null;

        BinaryExpr ant = null;

        AccessPred cons = null;


        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:134:2: (ant= bin_expr IMPLIES cons= lowest )
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:134:4: ant= bin_expr IMPLIES cons= lowest
            {
            pushFollow(FOLLOW_bin_expr_in_implies278);
            ant=bin_expr();
            _fsp--;

            match(input,IMPLIES,FOLLOW_IMPLIES_in_implies280); 
            pushFollow(FOLLOW_lowest_in_implies284);
            cons=lowest();
            _fsp--;

             result = new PermissionImplication(ant,cons); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end implies


    // $ANTLR start state_only
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:137:1: state_only returns [AccessPred result] : ref= ID IN state= ID ;
    public final AccessPred state_only() throws RecognitionException {
        AccessPred result = null;

        Token ref=null;
        Token state=null;

        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:138:2: (ref= ID IN state= ID )
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:138:4: ref= ID IN state= ID
            {
            ref=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_state_only303); 
            match(input,IN,FOLLOW_IN_in_state_only305); 
            state=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_state_only309); 
            result = new StateOnly(ref.getText(), state.getText());

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end state_only


    // $ANTLR start bin_expr_ap
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:142:1: bin_expr_ap returns [AccessPred result] : e= bin_expr ;
    public final AccessPred bin_expr_ap() throws RecognitionException {
        AccessPred result = null;

        BinaryExpr e = null;


        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:143:2: (e= bin_expr )
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:143:4: e= bin_expr
            {
            pushFollow(FOLLOW_bin_expr_in_bin_expr_ap330);
            e=bin_expr();
            _fsp--;

            result = new BinaryExprAP(e);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end bin_expr_ap


    // $ANTLR start bin_expr
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );
    public final BinaryExpr bin_expr() throws RecognitionException {
        BinaryExpr result = null;

        PrimaryExpr e1 = null;

        PrimaryExpr e2 = null;


        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:147:2: (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr )
            int alt3=2;
            switch ( input.LA(1) ) {
            case ID:
                {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==DEQ) ) {
                    alt3=1;
                }
                else if ( (LA3_1==NEQ) ) {
                    alt3=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 1, input);

                    throw nvae;
                }
                }
                break;
            case 24:
                {
                int LA3_2 = input.LA(2);

                if ( (LA3_2==NUMBER) ) {
                    int LA3_8 = input.LA(3);

                    if ( (LA3_8==DEQ) ) {
                        alt3=1;
                    }
                    else if ( (LA3_8==NEQ) ) {
                        alt3=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 8, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 2, input);

                    throw nvae;
                }
                }
                break;
            case NULL:
                {
                int LA3_3 = input.LA(2);

                if ( (LA3_3==DEQ) ) {
                    alt3=1;
                }
                else if ( (LA3_3==NEQ) ) {
                    alt3=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 3, input);

                    throw nvae;
                }
                }
                break;
            case TRUE:
                {
                int LA3_4 = input.LA(2);

                if ( (LA3_4==NEQ) ) {
                    alt3=2;
                }
                else if ( (LA3_4==DEQ) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 4, input);

                    throw nvae;
                }
                }
                break;
            case FALSE:
                {
                int LA3_5 = input.LA(2);

                if ( (LA3_5==NEQ) ) {
                    alt3=2;
                }
                else if ( (LA3_5==DEQ) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 5, input);

                    throw nvae;
                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("146:1: bin_expr returns [BinaryExpr result] : (e1= primary_expr DEQ e2= primary_expr | e1= primary_expr NEQ e2= primary_expr );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:147:4: e1= primary_expr DEQ e2= primary_expr
                    {
                    pushFollow(FOLLOW_primary_expr_in_bin_expr349);
                    e1=primary_expr();
                    _fsp--;

                    match(input,DEQ,FOLLOW_DEQ_in_bin_expr351); 
                    pushFollow(FOLLOW_primary_expr_in_bin_expr355);
                    e2=primary_expr();
                    _fsp--;

                    result = new EqualsExpr(e1,e2);

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:148:4: e1= primary_expr NEQ e2= primary_expr
                    {
                    pushFollow(FOLLOW_primary_expr_in_bin_expr364);
                    e1=primary_expr();
                    _fsp--;

                    match(input,NEQ,FOLLOW_NEQ_in_bin_expr366); 
                    pushFollow(FOLLOW_primary_expr_in_bin_expr370);
                    e2=primary_expr();
                    _fsp--;

                    result = new NotEqualsExpr(e1,e2);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end bin_expr


    // $ANTLR start primary_expr
    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:151:1: primary_expr returns [PrimaryExpr result] : (i= ID | '#' num= NUMBER | NULL | TRUE | FALSE );
    public final PrimaryExpr primary_expr() throws RecognitionException {
        PrimaryExpr result = null;

        Token i=null;
        Token num=null;

        try {
            // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:152:2: (i= ID | '#' num= NUMBER | NULL | TRUE | FALSE )
            int alt4=5;
            switch ( input.LA(1) ) {
            case ID:
                {
                alt4=1;
                }
                break;
            case 24:
                {
                alt4=2;
                }
                break;
            case NULL:
                {
                alt4=3;
                }
                break;
            case TRUE:
                {
                alt4=4;
                }
                break;
            case FALSE:
                {
                alt4=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("151:1: primary_expr returns [PrimaryExpr result] : (i= ID | '#' num= NUMBER | NULL | TRUE | FALSE );", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:152:4: i= ID
                    {
                    i=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_primary_expr389); 
                    result = new Identifier(i.getText());

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:153:4: '#' num= NUMBER
                    {
                    match(input,24,FOLLOW_24_in_primary_expr397); 
                    num=(Token)input.LT(1);
                    match(input,NUMBER,FOLLOW_NUMBER_in_primary_expr401); 
                    result = new ParamReference(num.getText());

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:154:4: NULL
                    {
                    match(input,NULL,FOLLOW_NULL_in_primary_expr408); 
                    result = Null.getInstance();

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\kbierhof\\My Documents\\workspace\\Plural\\permission-parser\\AccessPred.g:155:4: TRUE
                    {
                    match(input,TRUE,FOLLOW_TRUE_in_primary_expr416); 
                    result = BoolLiteral.getTrueInstance();

                    }
                    break;
                case 5 :
